# CoPL1

./: .gitignore  README.md  assignment1.ml  dune  dune-project  justfile  main.opam  package-lock.json  pyproject.toml
.github/workflows/: ci.yaml
.husky/: pre-commit
scripts/: __init__.py  build.py  format_code.py  run_parser.py  run_tests.py
src/: dune  dune-project  main.ml
tests/: __init__.py  dune  parser.t  test_interpreter.py  test_lambda_parser.py
tests/fixtures/: applications.txt  beta_reduction.txt  beta_simple.txt  complex_expressions.txt  lambda_abstractions.txt  mixed_valid.txt  normal_order.txt  omega.txt  parenthesized.txt  simple_variables.txt
