[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copl-lambda-calculus"
version = "1.0.0"
description = "Lambda calculus lexer and parser for CoPL course at Leiden University"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
build = "scripts.build:main"
format = "scripts.format_code:main"
test = "scripts.run_tests:main"
main = "scripts.run_parser:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
